--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
 	background-color:#f5f5f5;
 	padding:30px;
 }
+#my-id{
+	padding:3px;
+	background-color:#f5f5f5;
+	border:1px;
+}
 .my-pad{
 	border:1px solid;
 	margin:8px;
