--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 #container{
 	background-color:#f5f5f5;
-	padding:30px;
+	padding:20px;
 }
 #my-id{
-	padding:3px;
+	padding:1px;
 	background-color:#f5f5f5;
 	border:1px;
 }
@@ -13,7 +13,7 @@
 	background-color:white;
 	padding:5px;
 }
-.my-pond{
+p.my-pond{
 	text-align:right;
 	font-style:italic;
 }
