--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,14 @@
-#container{
+.my-1{
 	background-color:#f5f5f5;
 	padding:20px;
 }
-#my-id{
-	padding:1px;
-	background-color:#f5f5f5;
-	border:1px;
-}
-.my-pad{
-	border:1px solid;
-	margin:8px;
+.my-2{
+	border:1px solid #f5f5f5;
 	background-color:white;
-	padding:5px;
+	padding:8px;
+	box-sizing:border-box;
+	margin-bottom:15px;
 }
-p.my-pond{
+.my-3{
 	text-align:right;
-	font-style:italic;
 }
-
